# django-smsru

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
smsru/: __init__.py  admin.py  apps.py  models.py  service.py  signals.py  urls.py  views.py
smsru/locale/ru/LC_MESSAGES/: django.mo  django.po
smsru/management/commands/: send-sms-ru.py
smsru/migrations/: 0001_initial.py  0002_fix_log.py
