[metadata]
name = django-smsru
description = Django app for sms.ru.
long_description = file: README.md
url = 'https://github.com/iredun/django-smsru'
author = 'Redun Ivan'
author_email = redunivan@yandex.ru
license = BSD 3-Clause License
install_requires =
    requests
    Django
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
